[tool.poetry]
name = "vector_space"
version = "0.1.0"
description = ""
authors = ["guilhermerezende <guilherme.rezende@redacaonline.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
pandas = "^1.5.1"
nltk = "^3.7"
gensim = "^4.2.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
